--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,20 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Second</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="box-one">
+        <div class="purple"></div>
+        <div class="green"></div>
+        <div class="circle"></div>
+    </div>
+    <div class="box-two">
+        <div class="yellow"></div>
+    </div>
+    <div class="text-container">
+       <h1>Hello Friends</h1>
+    </div>
+</body>
+</html>
