--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,20 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Third</title>
+        <link rel="stylesheet" href="index.css"/>
+        <link rel="stylesheet" href="../reset.css"/>
+    </head>
+    <body>
+        <div class="row-1">
+        <div class="box"></div>
+        </div>
+        <div class="row-2">
+            <p>Some text to go into the second div.</p>
+        </div>
+        <div class="row-3"></div>
+        <div class="row-4"></div>
+        <div class="row-5"></div>
+        <div class="row-6"></div>
+    </body>
+</html>
